# sofr-swap-pnl-attribution

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: market_quotes.csv  positions.csv
results/: book_marks.csv  pnl_attribution.csv
scripts/: run_attribution.py
src/sofr_swap/: attribution.py  conventions.py  curve.py  instruments.py  pricing.py  viz.py
tests/: test_pricing.py
